IGNITE-20477 review fixes